force-app/main/default/objects/ssot__BusinessPeriod__dlm/fields/ssot__BusinessPeriodType__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessPeriodType__c</fullName>
    <label>Business Period Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusinessPeriodType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>