force-app/main/default/objects/ssot__BusinessPeriod__dlm/fields/ssot__CalendarId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CalendarId__c</fullName>
    <label>Calendar</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CalendarId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>