force-app/main/default/objects/ssot__BusinessPeriod__dlm/fields/ssot__FullyQualifiedLabel__c.field-meta.xml
<CustomField>
    <fullName>ssot__FullyQualifiedLabel__c</fullName>
    <label>Fully Qualified Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FullyQualifiedLabel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>