force-app/main/default/objects/ssot__BusinessPeriod__dlm/fields/ssot__IsForecastPeriod__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsForecastPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Forecast Period</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsForecastPeriod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>